--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <div class="container">
          <!-- Sidebar -->
           <aside class="sidebar">
+            <!-- Logo -->
             <div class="logo-container">
                 <div class="logo">
                     <img src="./img/logo.svg" alt="logo">
                     <a class="logo-text" href="#">Omoskillo</a>
                 </div>
             </div>
+            <!-- Account -->
             <div class="account-container">
                 <div class="avatar">
                     <img src="./img/avatar.svg" alt="avatar">
@@ -27,10 +29,11 @@
                 </div>
                 <img src="./img/ico/arrow.svg" alt="arrow">
             </div>
+            <!-- Navigation -->
             <div class="navigation">
                 <div class="navigation-items">
                     <img src="/img/ico/home.svg" alt="home" class="nav-icon">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="#" class="nav-link">Dashboard</a>
                 </div>
                 <div class="navigation-items">
                     <img src="./img/ico/courses.svg" alt="sourses" class="nav-icon">
@@ -57,6 +60,7 @@
                     <a href="#" class="nav-link">Forum</a>
                 </div>
             </div>
+            <!-- Special Bar -->
             <div class="specbar">
                 <div class="specbar-items">
                     <div class="specbar-list">
@@ -69,8 +73,45 @@
                     </div>
                 </div>
             </div>
+            <!-- Log Out -->
             <button class="Setting"><img src="./img/ico/logout.svg" alt="log out">Setting</button>
           </aside>
+         <!-- Main Content -->
+        <div class="main-content">
+            <!-- Header -->
+            <header class="header">
+                <div class="left-section">
+                    <a href="#" class="section-link">Learning Paths</a>
+                    <a href="#" class="section-link">Create</a>
+                    <a href="#" class="section-link">Build</a>
+                    <a href="#" class="section-link">Thrive</a>
+                </div>
+                <div class="right-section">
+                    <button class="button-mini"><img src="./img/ico/notification.svg" class="button-img" alt="notification"></button>
+                    <button class="button-mini"><img src="./img/ico/search.svg" class="button-img" alt="search"></button>
+                    <button class="button-normal">Became a teacher</button>
+                    <button class="button-normal">My classes</button>
+                </div>
+            </header>
+             <!--Main-->
+             <div class="main-container">
+                <main class="main">
+                    <!--Hero-->
+                    <div class="hero">
+                        <h1>Tune In And Level Up At Your Own Place</h1>
+                    </div>
+                    <!--Category-->
+                    <div class="category">
+                        <button class="button-category">Account Settings</button>
+                        <button class="button-category">Information</button>
+                        <button class="button-category">Subscription & payments</button>
+                        <button class="button-category">Notification</button>
+                        <button class="button-category">Account Security</button>
+                        <button class="button-category">Close account</button>
+                    </div>
+                </main>
+            </div>
+        </div>
     </div>
 </body>
 </html>
