--- a/index.html
+++ b/index.html
@@ -109,6 +109,39 @@
                         <button class="button-category">Account Security</button>
                         <button class="button-category">Close account</button>
                     </div>
+                    <!--Personal Info-->
+                    <div class="personal-information">
+                        <div class="personal-text">
+                            <div class="personal-left">
+                                <h2 class="personal-information-name">Personal Information</h2>
+                                <p class="personal-information-subhead">Upload your personal information here </p>
+                            </div>
+                        </div>
+                         <div class="personal-name">
+                                <div class="personal-name-left">
+                                    <label class="full-name" for="FullName">Full Name</label>
+                                    <input class="name-text" type="text" name="FullName" id="FullName" placeholder="Please enter your name here">
+                                </div>
+                                <div class="personal-name-left">
+                                    <label class="full-name" for="email">Email</label>
+                                    <input class="name-text" type="email" name="email" id="email" placeholder="gabI">
+                                </div>
+                        </div>
+                        <div class="personal-name">
+                                <div class="personal-name-left">
+                                    <label class="full-name" for="number">Contact Number</label>
+                                    <div class="number-fix">
+                                        <input class="number-index" type="number" placeholder="+920">
+                                        <input class="mobile-number" type="number" name="number" id="number" placeholder="01234-3465-872">
+                                    </div>
+                                </div>
+                                <div class="personal-name-left">
+                                    <label class="full-name" for="birthday">Birthday Date</label>
+                                    <input class="birthday-date" type="date" name="birthday" id="birthday" placeholder="March 12-1999">
+                                </div>
+                        </div>
+                        <button class="button-save">Save</button>
+                    </div>
                 </main>
             </div>
         </div>
