--- a/index.html
+++ b/index.html
@@ -142,6 +142,58 @@
                         </div>
                         <button class="button-save">Save</button>
                     </div>
+                    <!--Info Container-->
+                    <div class="info-container">
+                        <div class="info-left">
+                            <div class="info-header">
+                                <h2 class="info-header-text">Personal Information</h2>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="info-list">
+                                    <div class="info-items">
+                                        <div class="info-edit">
+                                            <img src="./img/ico/edit.svg" class="img-edit" alt="edit">
+                                        </div>
+                                        <div class="info-category-name">
+                                            <p class="info-subhead">Department</p>
+                                            <p class="info-subfoot">Development</p>
+                                        </div>
+                                    </div>
+                                    <div class="info-items">
+                                        <div class="info-edit">
+                                            <img src="./img/ico/edit.svg" class="img-edit" alt="edit">
+                                        </div>
+                                        <div class="info-category-name">
+                                            <p class="info-subhead">Team</p>
+                                            <p class="info-subfoot">Product hunt</p>
+                                        </div>
+                                    </div>
+                                    
+                                </div>
+                                <div class="info-list">
+                                    <div class="info-items">
+                                        <div class="info-edit">
+                                            <img src="./img/ico/edit.svg" class="img-edit" alt="edit">
+                                        </div>
+                                        <div class="info-category-name">
+                                            <p class="info-subhead">Role</p>
+                                            <p class="info-subfoot">Front-end developer</p>
+                                        </div>
+                                    </div>
+                                    <div class="info-items">
+                                        <div class="info-edit">
+                                            <img src="./img/ico/edit.svg" class="img-edit" alt="edit">
+                                        </div>
+                                        <div class="info-category-name">
+                                            <p class="info-subhead">Reg. Date</p>
+                                            <p class="info-subfoot">Aug 15, 2012</p>
+                                        </div>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </main>
             </div>
         </div>
