--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
                                       <span>About</span>
                                       <span>100/120 words</span>
                                   </div>
-                                  <textarea name="about" id="about">
-                                      "I'm a dedicated freelancer specializing in [your field, e.g., UI/UX design, writing, etc.], passionate about delivering creative and effective solutions. With [X years] of experience, I thrive on turning ideas into impactful results for my clients
+                                  <textarea name="about" id="about">"I'm a dedicated freelancer specializing in [your field, e.g., UI/UX design, writing, etc.], passionate about delivering creative and effective solutions. With [X years] of experience, I thrive on turning ideas into impactful results for my clients
                                   </textarea>
                               </div>
                           </div>
