--- a/index.html
+++ b/index.html
@@ -227,23 +227,23 @@
                           <div class="my-section">
                               <div class="my-info">
                                   <div class="my-info-top">
-                                      <div>
+                                      <div class="nav-bt">
                                           <div class="info-edit">
                                               <img src="./img/ico/edit.svg" class="img-edit" alt="edit">
                                           </div>
                                           <div class="info-edit">
-                                              <img src="./img/ico/edit.svg" class="img-edit" alt="edit">
+                                              <img src="./img/ico/world.svg" class="img-edit" alt="world">
                                           </div>
                                       </div>
                                       <img class="avatar-my" src="./img/avatar-andrio.svg" alt="avatar">
                                       <div>
                                           <div class="info-edit">
-                                              <img src="./img/ico/edit.svg" class="img-edit" alt="edit">
+                                              <img src="./img/ico/share.svg" class="img-edit" alt="share">
                                           </div>
                                       </div>
                                   </div>
                                   <div class="my-info-bottom">
-                                      <p>Andrio Richard</p>
+                                      <p class="my-name-info">Andrio Richard</p>
                                       <div class="tag">
                                           <button class="tag-button">Student</button>
                                           <button class="tag-button">Freelancer</button>
@@ -266,8 +266,8 @@
                               </div>
                               <div class="my-about">
                                   <div class="about-name">
-                                      <span>About</span>
-                                      <span>100/120 words</span>
+                                      <span class="my-about-name">About</span>
+                                      <span class="my-about-subname">100/120 words</span>
                                   </div>
                                   <textarea name="about" id="about">"I'm a dedicated freelancer specializing in [your field, e.g., UI/UX design, writing, etc.], passionate about delivering creative and effective solutions. With [X years] of experience, I thrive on turning ideas into impactful results for my clients
                                   </textarea>
