--- a/index.html
+++ b/index.html
@@ -80,11 +80,14 @@
         <div class="main-content">
             <!-- Header -->
             <header class="header">
-                <div class="left-section">
-                    <a href="#" class="section-link">Learning Paths</a>
-                    <a href="#" class="section-link">Create</a>
-                    <a href="#" class="section-link">Build</a>
-                    <a href="#" class="section-link">Thrive</a>
+                <div class="header-one">
+                    <button class="burger-menu"><img src="./img/ico/burger.svg" class="burger-menu-img" alt="search"></button>
+                    <div class="left-section">
+                        <a href="#" class="section-link">Learning Paths</a>
+                        <a href="#" class="section-link">Create</a>
+                        <a href="#" class="section-link">Build</a>
+                        <a href="#" class="section-link">Thrive</a>
+                    </div>
                 </div>
                 <div class="right-section">
                     <button class="button-mini"><img src="./img/ico/notification.svg" class="button-img" alt="notification"></button>
@@ -118,6 +121,9 @@
                                       <h2 class="personal-information-name">Personal Information</h2>
                                       <p class="personal-information-subhead">Upload your personal information here </p>
                                   </div>
+                                  <div class="info-edit">
+                                    <img src="./img/ico/more.svg" class="img-edit" alt="more">
+                                </div>
                               </div>
                                <div class="personal-name">
                                       <div class="personal-name-left">
@@ -254,7 +260,7 @@
                                   <div class="name-location">
                                       <h2 class="location-names">Location</h2>
                                       <div class="info-edit">
-                                          <img src="./img/ico/edit.svg" class="img-edit" alt="edit">
+                                          <img src="./img/ico/plus.svg" class="img-plus" alt="plus">
                                       </div>
                                   </div>
                                   <select name="loaction" id="location">
