--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- Navigation -->
             <div class="navigation">
                 <div class="navigation-items">
-                    <img src="/img/ico/home.svg" alt="home" class="nav-icon">
+                    <img src="./img/ico/home.svg" alt="home" class="nav-icon">
                     <a href="#" class="nav-link">Dashboard</a>
                 </div>
                 <div class="navigation-items">
@@ -40,23 +40,23 @@
                     <a href="#" class="nav-link">My Courses</a>
                 </div>
                 <div class="navigation-items">
-                    <img src="/img/ico/save.svg" alt="save" class="nav-icon">
+                    <img src="./img/ico/save.svg" alt="save" class="nav-icon">
                     <a href="#" class="nav-link">Save Classes</a>
                 </div>
                 <div class="navigation-items">
-                    <img src="/img/ico/paper.svg" alt="paper" class="nav-icon">
+                    <img src="./img/ico/paper.svg" alt="paper" class="nav-icon">
                     <a href="#" class="nav-link">Assignments</a>
                 </div>
                 <div class="navigation-items">
-                    <img src="/img/ico/test.svg" alt="test" class="nav-icon">
+                    <img src="./img/ico/test.svg" alt="test" class="nav-icon">
                     <a href="#" class="nav-link">Test</a>
                 </div>
                 <div class="navigation-items">
-                    <img src="/img/ico/Group.svg" alt="groups" class="nav-icon">
+                    <img src="./img/ico/Group.svg" alt="groups" class="nav-icon">
                     <a href="#" class="nav-link">Groups</a>
                 </div>
                 <div class="navigation-items">
-                    <img src="/img/ico/forums.svg" alt="dorum" class="nav-icon">
+                    <img src="./img/ico/forums.svg" alt="dorum" class="nav-icon">
                     <a href="#" class="nav-link">Forum</a>
                 </div>
             </div>
