--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             <div class="specbar">
                 <div class="specbar-items">
                     <div class="specbar-list">
-                        <img src="/img/ico/analystics.svg" alt="analystics" class="nav-icon">
+                        <img src="./img/ico/analystics.svg" alt="analystics" class="nav-icon">
                         <a href="#" class="nav-link">Analytics</a>
                     </div>
                     <div class="specbar-list">
-                        <img src="/img/ico/setting.svg" alt="setting" class="nav-icon">
+                        <img src="./img/ico/setting.svg" alt="setting" class="nav-icon">
                         <a href="#" class="nav-link">Setting</a>
                     </div>
                 </div>
