--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                   </div>
                                   <div class="resume">
                                       <label for="resume" class="resume-text">Resume</label>
-                                      <input type="url" class="resume-link" name="link" id="link" placeholder="enter your resume link here">
+                                      <input type="url" class="resume-link" name="resume" id="link" placeholder="enter your resume link here">
                                   </div>
                                   <div class="additional-link">
                                       <label for="Additional-links" class="Additional-link-name">Additional links</label>
